// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Interactive 1`] = `
HTMLCollection [
  <div
    class="s-u8CdeWxIm4f1"
  />,
  <button
    class="s-NMyTiX1zi6rz"
  >
    
    
    
    Add toast
  </button>,
]
`;

exports[`Text only 1`] = `
<div
  class="s-u8CdeWxIm4f1"
>
  
  <div
    class="s-qGWxPda9kJl2"
    style="--bg-color: #fcfcfc; --duration: 5s; --close-duration: 0.5s;"
  >
    <span
      class="material-icons s-qGWxPda9kJl2"
    >
      
    </span>
     
    <strong
      class="s-qGWxPda9kJl2"
    >
      simple message
    </strong>
     
    <button
      class="transparent s-NMyTiX1zi6rz"
    >
      <span
        class="material-icons s-NMyTiX1zi6rz"
      >
        close
      </span>
      
      
      
    </button>
    <!--&lt;Button&gt;-->
  </div>
  <!--&lt;Message&gt;-->
</div>
`;

exports[`Text, color and icon 1`] = `
<div
  class="s-u8CdeWxIm4f1"
>
  
  <div
    class="s-qGWxPda9kJl2"
    style="--bg-color: #41d26d; --duration: 5s; --close-duration: 0.5s;"
  >
    <span
      class="material-icons s-qGWxPda9kJl2"
    >
      beach_access
    </span>
     
    <strong
      class="s-qGWxPda9kJl2"
    >
      message with color and icon
    </strong>
     
    <button
      class="transparent s-NMyTiX1zi6rz"
    >
      <span
        class="material-icons s-NMyTiX1zi6rz"
      >
        close
      </span>
      
      
      
    </button>
    <!--&lt;Button&gt;-->
  </div>
  <!--&lt;Message&gt;-->
</div>
`;
